--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +14,91 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+p {
+  font-size: 1.5rem;
+}
+
+h1 {
+  font-size: 6rem;
+}
+
+.App {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0, 4);
+  color: #fff;
+}
+
+.App:before {
+  width: 100%;
+  height: 100%;
+  background: url('./assets/sunset.jpg') no-repeat center center/cover;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.infoContainer {
+  width: 700px;
+  height: 715px;
+  margin: auto;
+  padding: 0.1rem;
+  position: relative;
+  flex-direction: column;
+  display: flex;
+  justify-content: space-between;
+  top: 10%;
+}
+
+input {
+  color: #fff;
+  border-radius: 25px;
+  text-align: center;
+  width: 100%;
+  margin-top: 0.666rem;
+  border-color:#fff;
+  border: 2px;
+  background: rgba(255,255,255, 0.1);
+  font-size: 1.2rem;
+  padding: 0.7rem 1.5rem; 
+  margin: 1rem auto;; 
+}
+
+::placeholder {
+  color: #fff;
+}
+
+.bottom{
+  background: rgba(255,255,255, 0.2);
+  border-radius: 12px;
+  text-align: center;
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+  padding: 1rem;
+  margin: 1rem auto;
+}
+
+.tempAtMoment {
+  padding-top: 24rem;
+  text-align: center;
+  
+}
+
+.locationName { 
+  position: absolute;
+  left: 50%;
+  margin-left: -50px;
+  padding-top: 5rem;
+  font-size: 3rem;
+  font-weight: bold;
+  width: 100px;
+  height: 100px;
+}
+
+.description p{
+  font-size: 1.7rem;
 }
