--- a/src/index.css
+++ b/src/index.css
@@ -53,18 +53,18 @@ h1 {
 }
 
 input {
+  display: flex;
   color: #fff;
   border-radius: 25px;
   text-align: center;
-  width: 100%;
+  width: 20%;
+  margin-left: 40%;
   margin-top: 0.666rem;
   border-color:#fff;
   border: 2px;
   background: rgba(255,255,255, 0.1);
   font-size: 1.2rem;
   padding: 0.7rem 1.5rem; 
-  margin: 0.rem auto;; 
-  top: 0;
 }
 
 ::placeholder {
@@ -77,7 +77,7 @@ input {
   text-align: center;
   display: flex;
   justify-content: space-evenly;
-  width: 100%;
+  width: 50%;
   padding: 1rem;
   margin: 1rem auto;
 }
