--- a/src/index.css
+++ b/src/index.css
@@ -43,13 +43,14 @@ h1 {
 
 .infoContainer {
   width: 100%;
-  height: 104vh;
+  height: 100vh;
   margin: auto;
   padding: 0.1rem;
   position: relative;
   flex-direction: column;
   display: flex;
   justify-content: space-between;
+  bottom:3px;
 }
 
 input {
@@ -79,7 +80,8 @@ input {
   justify-content: space-evenly;
   width: 50%;
   padding: 1rem;
-  margin: 1rem auto;
+  margin: 0.2rem auto;
+  margin-bottom: 0;
 }
 
 .tempAtMoment {
