--- a/src/index.css
+++ b/src/index.css
@@ -65,25 +65,51 @@ input {
   border: 2px;
   background: rgba(255,255,255, 0.1);
   font-size: 1.2rem;
-  padding: 0.7rem 1.5rem; 
+  padding: 0.7rem 1.5rem;
+  opacity: 70%;
 }
 
 ::placeholder {
+  opacity: 100%;
   color: #fff;
 }
-
-.bottom{
-  background: rgba(255,255,255, 0.2);
+.bottom {
+  background: rgba(255, 255, 255, 0.2);
   border-radius: 12px;
   text-align: center;
+  align-items: center;
   display: flex;
-  justify-content: space-evenly;
   width: 50%;
-  padding: 1rem;
+  height: 7%;
+  padding: 0.6rem;
   margin: 0.2rem auto;
-  margin-bottom: 0;
+  margin-bottom: 2px;
+  opacity: 1; /* Alterado para 1 para 100% de opacidade */
+  justify-content: space-evenly;
 }
 
+.howItFeels,
+.humidity,
+.windVel {
+  color: #ffffff;
+  font-size: 1.5rem;
+  font-weight: bolder;
+  line-height: 0.7rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-top: 40px;
+
+}
+
+
+.howItFeels p,
+.humidity p,
+.windVel p {
+  margin-bottom: 20px; /* Ajuste a quantidade de espaço conforme necessário */
+}
 .tempAtMoment {
   width: 100%;
   text-align: center;
@@ -110,3 +136,5 @@ input {
   margin-left: auto; /* aqui */
   margin-right: auto; /* e aqui */
 }
+
+
